# mcp_test

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: main.py
server/: __init__.py  app.py  registry.py
server/adapters/: __init__.py  assets_adapter.py  general_adapter.py  plotting_adapter.py  search_adapter.py
tools/: __init__.py  assets.py  general.py  plotting.py  search.py
