[project]
name = "fastmcp-time-server"
version = "0.1.0"
description = "Minimal FastMCP + FastAPI server with a time tool and health check."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.11",
  "fastapi",
  "matplotlib",
  "numpy"
]

[tool.uv]           # uv reads this to manage the venv in Docker
