[project]
name = "cdbai-mcp-server"
version = "0.1.2"
description = "Minimal FastMCP server with various tools."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "requests",
  "gpt-researcher",
  "ddgs",
  "flashtext",
  "cdbai @ git+https://github.com/cannin/cdbai_chat.git"
]

[project.optional-dependencies]
mcp = [
  "fastmcp==2.12.4",
  "boto3"
]

[tool.uv]           # uv reads this to manage the venv in Docker
